--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,11 +13,12 @@
 			<ul class="d-flex flex-row gap-4 mb-0 align-items-center">
 				<li><a href="/"> 🏠 Accueil</a></li>
 				<li><a href="/planning"> 📅 Planning</a></li>
-				<li><a href="/messagerie"> 💬 Messagerie</a></li>
+				<!-- <li><a href="/messagerie"> 💬 Messagerie</a></li> -->
 				<li><a href="/documents"> 📁 Documents</a></li>
 				<% if (typeof user !== 'undefined' && user && user.role === 1) { %>
 					<li><a href="/listeEmployer"> 👥 Salariés</a></li>
-					<% } %>
+					<li><a href="/clients">👤 Clients</a></li>
+				<% } %>
 			</ul>
 		</div>
 	</div>
@@ -74,6 +75,7 @@
 							<li><a href="/documents" onclick="closeMobileMenu()">📁 Documents</a></li>
 							<% if (typeof user !== 'undefined' && user && user.role === 1) { %>
 								<li><a href="/listeEmployer" onclick="closeMobileMenu()">👥 Salariés</a></li>
+								<li><a href="" onclick="closeMobileMenu()">👤 Clients</a></li>
 							<% } %>
 						</ul>
 						<div class="mobile-menu-footer">
