bdd clients & ajout opé avec design opé

--- a/views/pages/admin/client.ejs
+++ b/views/pages/admin/client.ejs
@@ -73,7 +73,7 @@
                                     <td>
                                         <div class="client-email">
                                             <i class="fas fa-at"></i>
-                                            <%= client.email %>
+                                            <%= client.mail %>
                                         </div>
                                     </td>
                                     <td>
