--- a/public/CSS/ADMIN/client.css
+++ b/public/CSS/ADMIN/client.css
@@ -140,6 +140,10 @@
   gap: 0.5rem;
   box-shadow: 0 4px 15px rgba(143, 149, 211, 0.3);
 }
+.client-btn a {
+  text-decoration: none;
+  color: #FFF;
+}
 .client-btn:hover {
   transform: translateY(-2px);
   box-shadow: 0 8px 25px rgba(143, 149, 211, 0.4);
