--- a/views/pages/admin/addClient.ejs
+++ b/views/pages/admin/addClient.ejs
@@ -66,8 +66,8 @@
                             </div>
                             
                             <div class="form-group full-width">
-                                <label for="email" class="form-label">Email <span class="required">*</span></label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="client@example.com" required>
+                                <label for="mail" class="form-label">Email <span class="required">*</span></label>
+                                <input type="email" class="form-control" id="mail" name="mail" placeholder="client@example.com" required>
                             </div>
                         </div>
                     </div>
