ajout ligne css document et about

--- a/views/pages/admin/editDocument.ejs
+++ b/views/pages/admin/editDocument.ejs
@@ -1,5 +1,6 @@
 <!-- START STYLE -->
 <link rel="stylesheet" href="/CSS/addDocument.css">
+<link rel="stylesheet" href="/CSS/ADMIN/addDocument.css">
 <!-- END STYLE -->
 
 <!-- START CONTENT -->
