--- a/views/pages/admin/voir-plus.ejs
+++ b/views/pages/admin/voir-plus.ejs
@@ -1,5 +1,6 @@
 <!-- START STYLE -->
 <link rel="stylesheet" href="/CSS/profil.css">
+<link rel="stylesheet" href="/CSS/PAGES/profil.css">
 <!-- END STYLE -->
 
 <!-- START CONTENT -->
