--- a/views/pages/admin/client.ejs
+++ b/views/pages/admin/client.ejs
@@ -79,7 +79,9 @@
                                     <td>
                                         <div class="action-buttons">
                                             <button class="btn-view" title="Voir plus">
+                                            <a href="/about-client/<%= client.id_client %>" title="Voir plus">
                                                 <i class="fas fa-eye"></i>
+                                            </a>
                                             </button>
                                             <button class="btn-edit" title="Modifier">
                                                 <i class="fas fa-edit"></i>
