--- a/public/CSS/ADMIN/client.scss
+++ b/public/CSS/ADMIN/client.scss
@@ -337,6 +337,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        a {
+            text-decoration: none;
+            color: $white;
+        }
         
         i {
             font-size: 0.9rem;
